Making HTML structure

--- a/index.html
+++ b/index.html
@@ -9,11 +9,37 @@
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
-  <title>My Project</title>
+  <title>Expanding Cards</title>
 </head>
 
 <body>
-  <h1>Project Starter</h1>
+  <div class="container">
+    <div class="panel active"
+      style="background-image:
+      url('https://images.unsplash.com/photo-1630692158486-f1e2dd74142b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1100&q=80');">
+      <h3>Explore the World</h3>
+    </div>
+    <div class="panel"
+      style="background-image:
+      url('https://images.unsplash.com/photo-1533139143976-30918502365b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
+      <h3>Discover new Horizons</h3>
+    </div>
+    <div class="panel"
+      style="background-image:
+      url('https://images.unsplash.com/photo-1630495325532-815f8d91a31e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
+      <h3>Get unique Experiences</h3>
+    </div>
+    <div class="panel"
+      style="background-image:
+      url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1053&q=80');">
+      <h3>Feel Nature</h3>
+    </div>
+    <div class="panel"
+      style="background-image:
+      url('https://images.unsplash.com/photo-1491002052546-bf38f186af56?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1083&q=80');">
+      <h3>Live your Life</h3>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 
