Adding overlay color and making styles adjustments

--- a/index.html
+++ b/index.html
@@ -18,26 +18,31 @@
       style="background-image:
       url('https://images.unsplash.com/photo-1630692158486-f1e2dd74142b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1100&q=80');">
       <h3>Explore the World</h3>
+      <div class="overhide"></div>
     </div>
     <div class="panel"
       style="background-image:
       url('https://images.unsplash.com/photo-1533139143976-30918502365b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
       <h3>Discover new Horizons</h3>
+      <div class="overhide"></div>
     </div>
     <div class="panel"
       style="background-image:
       url('https://images.unsplash.com/photo-1630495325532-815f8d91a31e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
       <h3>Get unique Experiences</h3>
+      <div class="overhide"></div>
     </div>
     <div class="panel"
       style="background-image:
       url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1053&q=80');">
       <h3>Feel Nature</h3>
+      <div class="overhide"></div>
     </div>
     <div class="panel"
       style="background-image:
       url('https://images.unsplash.com/photo-1491002052546-bf38f186af56?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1083&q=80');">
       <h3>Live your Life</h3>
+      <div class="overhide"></div>
     </div>
   </div>
   <script src="script.js"></script>
